feat: working on portal wallet

--- a/crates/cdk-portal-wallet/Cargo.toml
+++ b/crates/cdk-portal-wallet/Cargo.toml
@@ -26,3 +26,4 @@ lightning.workspace = true
 tokio-stream.workspace = true
 reqwest.workspace = true
 uuid.workspace = true
+rand = { version = "0.9.1" }
