--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,6 +119,7 @@ nostr-sdk = { version = "0.43.0", default-features = false, features = [
 ]}
 
 
+cdk-portal-wallet = { path = "./crates/cdk-portal-wallet", version = "=0.14.0" }
 
 
 [workspace.metadata]
