--- a/crates/cdk-axum/Cargo.toml
+++ b/crates/cdk-axum/Cargo.toml
@@ -38,5 +38,7 @@ redis = { version = "0.31.0", features = [
     "tokio-rustls-comp",
 ], optional = true }
 
+cdk-common = { workspace = true }
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 uuid = { workspace = true, features = ["js"] }
